# COS214

./: README.md
Practicals/Practical 6/: BrickFactory.cpp  BrickFactory.h  Broken.h  BudgetDepartment.cpp  BudgetDepartment.h  BuildCommand.h  Building.h  BuildingCollection.cpp  BuildingCollection.h  BuildingFactory.h  BuildingIterator.h  Citizen.cpp  Citizen.h  CitizenFactory.cpp  CitizenFactory.h  City.h  CityBuilder.h  Command.h  Commercial.cpp  Commercial.h  CommercialFactory.cpp  CommercialFactory.h  Damaged.h  DepartmentOfHomeAffairs.cpp  DepartmentOfHomeAffairs.h  DepartmentOfWaterPowerAndSanitation.cpp  DepartmentOfWaterPowerAndSanitation.h  Director.h  EducationService.h  EducationState.cpp  EducationState.h  Factory.cpp  Factory.h  FactoryFactory.h  FlatTaxStrategy.cpp  FlatTaxStrategy.h  Functional.h  Government.cpp  Government.h  HealthService.cpp  (+57 more)
Practicals/Practical 6/game-engine-version/headers/: BrickFactory.h  BrokenState.h  BuildCommand.h  Building.h  BuildingCollection.h  BuildingFactory.h  BuildingIterator.h  City.h  Commercial.h  CommercialFactory.h  DepartmentOfHomeAffairs.h  DepartmentOfWaterPowerAndSanitation.h  Director.h  EducationService.h  Factory.h  FactoryFactory.h  FunctionalState.h  HealthService.h  HealthState.h  HighFundingEducationState.h  HighFundingState.h  Landmark.h  LandmarkFactory.h  LowFundingEducationState.h  LowFundingState.h  NameGenerator.h  PoliceService.h  PoliceState.h  Power.h  ProgressiveTaxStrategy.h  RepairUtilitiesCommand.h  Residential.h  ResidentialFactory.h  Service.h  ServiceFactory.h  Simulation.h  SteelFactory.h  TaxAuthority.h  TransportDepartment.h  TransportState.h  (+3 more)
Practicals/Practical 6/game-engine-version/src/: Building.cpp  (+38 more)
Practicals/Practical 6/testingBuildingIterator/: Building.cpp  Building.h  BuildingCollection.cpp  FlatTaxStrategy.h  Main.cpp  ProgressiveTaxStrategy.h  TaxAuthority.cpp  TaxAuthority.h
Practicals/Practical1/: CMakeLists.txt  Course.cpp  Course.h  Dessert.cpp  Dessert.h  MainCourse.cpp  MainCourse.h  Makefile  Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  Starter.cpp  Starter.h  main.cpp
Practicals/Practical2/: Boatman.cpp  Boatman.h  BoatmanFactory.cpp  BoatmanFactory.h  CMakeLists.txt  CareTaker.cpp  CareTaker.h  ConcreteMemento.cpp  ConcreteMemento.h  Infantry.cpp  Infantry.h  InfantryFactory.cpp  InfantryFactory.h  Makefile  Memento.cpp  Memento.h  ShieldBearer.cpp  ShieldBearer.h  ShieldBearerFactory.cpp  ShieldBearerFactory.h  Soldiers.cpp  Soldiers.h  SoldiersFactory.cpp  SoldiersFactory.h  TestingMain.cpp  main.cpp
Practicals/Practical3/: Ambush.cpp  Ambush.h  Artillery.cpp  Artillery.h  BattleStrategy.h  CMakeLists.txt  Cavalry.cpp  Cavalry.h  Century.cpp  Century.h  Cohort.cpp  Cohort.h  CompositeUnit.cpp  CompositeUnit.h  Direction.cpp  Direction.h  Flanking.cpp  Flanking.h  Fortification.cpp  Fortification.h  Infantry.cpp  Infantry.h  Legion.cpp  Legion.h  LegionFactory.h  LegionUnit.h  MakeCommands.txt  Makefile  OpenField.cpp  OpenField.h  OpenFieldFactory.h  Practical3.vpp  ReadMe  Riverbank.cpp  Riverbank.h  RiverbankFactory.h  TacticalCommand.cpp  TacticalCommand.h  TacticalMemento.h  TacticalPlanner.cpp  (+10 more)
Practicals/Practical4/: BFSStrategy.cpp  BFSStrategy.h  Barn.cpp  Barn.h  CMakeLists.txt  Crop.h  CropField.cpp  CropField.h  DFSStrategy.cpp  DFSStrategy.h  DrySoil.cpp  DrySoil.h  Event.h  Farm.cpp  Farm.h  FarmComposite.h  FarmDecorator.h  FarmIterator.cpp  FarmIterator.h  FarmUnit.cpp  FarmUnit.h  FertilizerDecorator.h  FertilizerTruck.cpp  FertilizerTruck.h  FloodedSoil.cpp  FloodedSoil.h  FruitfulSoil.cpp  FruitfulSoil.h  Iterator.h  LogisticsTruck.cpp  LogisticsTruck.h  Makefile  SoilState.h  StorageDecorator.h  TraversalStrategy.h  Truck.h  main.cpp
Practicals/Practical5/: Command.h  DeviceType.h  Event.h  LockDoorsCommand.cpp  LockDoorsCommand.h  MacroCommand.cpp  MacroCommand.h  SetLightIntensityCommand.cpp  SetLightIntensityCommand.h  SetTemperatureCommand.cpp  SetTemperatureCommand.h  TurnOffLightsCommand.cpp  TurnOffLightsCommand.h  TurnOnLightsCommand.cpp  TurnOnLightsCommand.h  UnlockDoorsCommand.cpp  UnlockDoorsCommand.h  main.cpp
Tutorials/Tutorial1/: A.cpp  A.h  B.cpp  B.h  C.cpp  C.h  CMakeLists.txt  Calculator.cpp  Calculator.h  D.cpp  D.h  main.cpp
Tutorials/Tutorial3/StatePattern/: CMakeLists.txt  DeadState.cpp  DeadState.h  IdleState.cpp  IdleState.h  Player.cpp  Player.h  State.cpp  State.h
Tutorials/exam-practice-1/: Application.cpp  Application.h  Attendee.h  BluetoothConnection.cpp  BluetoothConnection.h  Connection.h  Judge.h  LanConnection.cpp  LanConnection.h  User.h  WifiConnection.cpp  WifiConnection.h
Tutorials/facade/: Customer.cpp  Customer.h  Kitchen.cpp  Kitchen.h  OrderFacade.cpp  OrderFacade.h  Waiter.cpp  Waiter.h
Tutorials/proxy/: Main.cpp  MessageServer.h  ProxyMessageServer.cpp  ProxyMessageServer.h  RealMessageServer.cpp  RealMessageServer.h
Tutorials/test-practice/: abstractFactory.cpp  adapter.cpp  chain.cpp  classAdapter.cpp  command.cpp  composite.cpp  decorator.cpp  factory.cpp  interpreter1.cpp  mediator.cpp  observer.cpp  prototype.cpp  sorting.cpp  state.cpp  strategy.cpp  template.cpp
Tutorials/visitor/: Circle.h  Ciricle.cpp  Square.cpp  Square.h  Visitor.cpp  Visitor.h
(+114 files in other folders)
